<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textToBeChanged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/header_margin"
        android:layout_marginBottom="@dimen/header_margin"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <EditText
        android:id="@+id/editTextUserInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/type_something"
        android:textSize="15sp"
        android:textColor="@android:color/holo_red_dark" />


   <!-- <EditText
        android:id="@+id/editTextTestInputOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/type_something"
        android:textSize="15sp"
        android:textColor="@android:color/holo_red_dark" />

    <EditText
        android:id="@+id/editTextTestInputTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/type_something"
        android:textSize="15sp"
        android:textColor="@android:color/holo_red_dark" />-->




    <Button
        android:id="@+id/btnChangeText"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/change_text" />


    <Button
        android:id="@+id/activityChangeTextBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/open_activity_and_change_text" />


    <TextView
        android:id="@+id/textToBeChangedFromSpinner"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="Countries"
        tools:ignore="HardcodedText" />


    <Spinner
        android:id="@+id/spinner_countries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:layout_marginBottom="50dp"
        android:minHeight="30dp"
        android:popupBackground="@android:color/holo_blue_dark"
        android:background="@drawable/spinner_bg"/>


    <EditText android:id="@+id/edit_text_caller_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="Please enter a number"
        android:inputType="phone" />

    <Button android:id="@+id/button_call_number"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Call number"
        android:layout_gravity="center_horizontal"
        android:onClick="onCall"/>

    <Button android:id="@+id/button_pick_contact"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pick numer"
        android:layout_gravity="center_horizontal"
        android:onClick="onPickContact"/>

</LinearLayout>
