<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Basic Espresso sample</string>
    <string name="hello_world">Hello Espresso!</string>
    <string name="change_text">Change text</string>
    <string name="type_something">type something…</string>
    <string name="open_activity_and_change_text">Open activity and change text</string>

    <string name="type_a_phone_number">Please enter a number…</string>
    <string name="button_dial_number">Call Number</string>
    <string name="button_pick_contact">Pick Number</string>
    <string name="contacts_activity_placeholder">This a placeholder Activity for a contacts screen.
        This activity is never opened and does not contain any real contact data for
        keeping this sample simple and focused.
    </string>
    <string name="warning_call_phone_permission">This app requires \'call phone\' permission to run</string>
</resources>
